# strict-types

./: .gitignore  .travis.yml  LICENSE  README.md  stack.yaml  strict-types.cabal
src/Data/: Strict.hs
src/Data/Strict/: Forced.hs  HashMap.hs
src/Type/: Strict.hs
