name:           strict-types
version:        0.1.0
synopsis:       A type level predicate ranging over strict types
description:    A type class for types T where forall x :: T . rnf x = \u22A5 <=> rwhnf x = \u22A5
build-type:     Simple
cabal-version:  >= 1.10
tested-with: ghc-8.2.1
homepage:       https://github.com/pepeiborra/strict-types
extra-source-files:  README.md

library
  hs-source-dirs:
      src
  build-depends:
      base
  exposed-modules:
      Type.Strict
  other-modules:
      Paths_strict_types
  default-language: Haskell2010
